--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'SoDoSansSansRegular';
+    src: url('/font/SoDoSans-Regular.woff');
+}
+@font-face {
+    font-family: 'SoDoSansSemiBold';
+    src: url('/font/SoDoSans-SemiBold.woff');
+}
+@font-face {
+    font-family: 'SoDoSansBold';
+    src: url('/font/SoDoSans-Bold.woff');
+}
+
 :root {
     --background: #ffffff;
     --foreground: #171717;
@@ -17,5 +30,24 @@
 body {
     color: var(--foreground);
     background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+    body {
+        @apply font-regular leading-[1.2];
+    }
+}
+
+@layer components {
+    .wrapperIcon {
+        @apply flex h-10 w-10 items-center justify-center rounded-full bg-black;
+    }
+
+    .footerIcon {
+        @apply h-6 w-6 text-white;
+    }
+
+    .footerLink {
+        @apply mb-1 w-fit py-2 text-[18px] text-black md:mb-2 md:py-3;
+    }
 }
