--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'SoDoSansSansRegular';
-    src: url('/font/SoDoSans-Regular.woff');
-}
-@font-face {
-    font-family: 'SoDoSansSemiBold';
-    src: url('/font/SoDoSans-SemiBold.woff');
-}
-@font-face {
-    font-family: 'SoDoSansBold';
-    src: url('/font/SoDoSans-Bold.woff');
+    font-family: 'Netflix';
+    src: url('/font/NetflixSans_W_Rg.woff2');
 }
 
 :root {
@@ -34,20 +26,24 @@ body {
 
 @layer base {
     body {
-        @apply font-regular leading-[1.2];
+        @apply font-netflix leading-[1.2];
     }
 }
 
 @layer components {
     .wrapperIcon {
-        @apply flex h-10 w-10 items-center justify-center rounded-full bg-black;
+        @apply flex h-8 w-8 items-center justify-center rounded-full bg-black;
     }
 
     .footerIcon {
-        @apply h-6 w-6 text-white;
+        @apply h-4 w-4 text-white;
     }
 
     .footerLink {
-        @apply mb-1 w-fit py-2 text-[18px] text-black md:mb-2 md:py-3;
+        @apply mb-1 w-fit py-2 text-[16px] text-black md:mb-0 md:py-3;
+    }
+
+    .headerLink {
+        @apply text-xs font-black tracking-[2px] text-black hover:text-primary;
     }
 }
