--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    font-family:
+        Roboto,
+        Helvetica Neue-Light,
+        Helvetica Neue Light,
+        Helvetica Neue,
+        Helvetica,
+        Arial,
+        Lucida Grande,
+        sans-serif;
+}
+
 body {
-    color: black;
+    color: #333333;
 }
 
 @layer base {
     body {
         @apply leading-[1.2] text-black;
     }
-  :root {
+    :root {
         --background: 0 0% 100%;
         --foreground: 240 10% 3.9%;
         --card: 0 0% 100%;
@@ -37,7 +49,7 @@ body {
         --chart-5: 27 87% 67%;
         --radius: 0.5rem;
     }
-  .dark {
+    .dark {
         --background: 240 10% 3.9%;
         --foreground: 0 0% 98%;
         --card: 240 10% 3.9%;
@@ -93,13 +105,11 @@ body {
     }
 }
 
-
-
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+    * {
+        @apply border-border outline-ring/50;
     }
-  body {
-    @apply bg-background text-foreground;
+    body {
+        @apply bg-background text-foreground;
     }
 }
