--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@ body {
     }
 
     .quantityBtn {
-        @apply flex h-8 w-8 items-center justify-center !rounded-full !border-[#d8d8d8];
+        @apply flex h-6 w-6 items-center justify-center !rounded-full !border-[#d8d8d8] lg:h-8 lg:w-8;
     }
 }
 
