--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,6 +111,14 @@ body {
     .quantityBtn {
         @apply flex h-6 w-6 items-center justify-center !rounded-full !border-[#d8d8d8] lg:h-8 lg:w-8;
     }
+
+    .registrationField {
+        @apply flex flex-col gap-y-1 md:flex-row md:items-center md:gap-x-2;
+    }
+
+    .registrationLabel {
+        @apply md:w-[45%] md:text-right;
+    }
 }
 
 @layer base {
