--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,4 +152,8 @@ body {
     .settingLink {
         @apply cursor-pointer hover:font-semibold;
     }
+
+    .tableColumn {
+        @apply text-nowrap text-center;
+    }
 }
